--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,23 @@
 body {
     margin: 0px;
+    font-family: 'Open Sans', sans-serif;
+    height: 100%;
+}
+
+#wrapper {
+    position: static;
+    min-height: 100%;
 }
 
 /*---------------HEADER------------------------*/
+/* https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_carousel&stacked=h */
 
 #frontImage {
-    position: fixed;
+    /*position: absolute;*/
     width: 100%;
-    height: 400px;
+    height: 393px; /* remember to change at #page top*/
     /* The image used */
-    background-image: url("../images/makerfaire2016.jpg");
+    background-image: url("../images/frontImage.jpg");
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -19,15 +27,15 @@ body {
 
 #frontText {
     text-align: center;
-    font-family: 'Share', cursive;
     font-size: 90px;
-    font-weight: bolder;
-    padding-top: 10%;
+    font-weight: 700;
+    padding-top: 13%;
     color: white;
 }
 
 #navbar {
     position: fixed;
+    background-color: #1F4850;
     width: 100%;
     height: 80px; /*remember to change at #page padding*/
     z-index: 100;
@@ -40,22 +48,24 @@ body {
 
 #navbarLogo img {
     height: 80%;
-    padding: 10%;
+    padding-top: 5%;
 }
 
 #navbarMenu ul {
     float: right;
+    padding-top: 10px;
 }
 
 #navbarMenu li {
     display: inline;
-    margin: 0;
+    padding-right: 30px;
 }
 
 #navbarMenu li a {
     text-align: center;
-    padding: 20px 20px 20px 20px;
     text-decoration: none;
+    font-weight: 800;
+    font-size: 14px;
     color: white;
 }
 
@@ -66,8 +76,112 @@ body {
     and change the background of navbar to white.
 */
 
-#page img {
-    position: relative;
-    top: 400px;
+#page {
+    /*position: absolute;*/
+    width: 100%;
+    /*top: 553px; /* 473 (frontImage) + 80 (navbar)*/
+    color: black;
+    margin: 0px;
+    padding: 0px;
 }
 
+#pageText {
+    width: 70%;
+    margin: auto;
+    margin-top: 90px;
+}
+
+#pageText h1 {
+    padding: 0px;
+    margin: 0px;
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+#pageText p {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: center;
+}
+
+#links {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    /*position: absolute;*/
+    width: 75%;
+}
+
+.linkCard {
+    display: inline-block;
+    width: 45.7%;
+    margin: 2%;
+    text-align: center;
+    padding: 0px;
+    border: 0px;
+    background-color: white;
+}
+
+.linkCard img {
+    height: 100%;
+    width: 100%;
+}
+
+.linkCard h2 {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.linkCard p {
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.linkCard a {
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+    color: #1F4850;
+}
+
+/*-----------------------FOOTER---------------*/
+#footer {
+    position: static;
+    width: 100%;
+}
+
+#footer1 {
+    background-color: #333333;
+    height: 110px;
+    margin: 0;
+    text-align: center;
+}
+
+#footer2 {
+    martin: 0;
+    height: 210px;
+    background-color: #1F1F1F;
+    font-size: 15px;
+    font-weight: 400;
+    color: white;
+    text-align: center;
+}
+
+#footer2 ul {
+    padding-top: 110px;  
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+}
+
+#footer2 li {
+    display: inline-block;
+    padding-left: 30px;
+    padding-right: 30px;
+}
