--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
     width: 100%;
     height: 80px; /*remember to change at #page padding*/
     z-index: 100;
+    opacity: 0.8;
 }
 
 #navbarLogo {
