--- a/css/styleInstruments.css
+++ b/css/styleInstruments.css
@@ -39,6 +39,7 @@ body {
     width: 100%;
     height: 80px; /*remember to change at #page padding*/
     z-index: 100;
+    opacity: 0.8;
 }
 
 #navbarLogo {
@@ -77,7 +78,6 @@ body {
 */
 
 #page {
-    /*position: absolute;*/
     width: 100%;
     /*top: 553px; /* 473 (frontImage) + 80 (navbar)*/
     color: black;
@@ -85,73 +85,74 @@ body {
     padding: 0px;
 }
 
-#pageText {
-    width: 70%;
-    margin: auto;
-    margin-top: 90px;
+
+#sidebar {
+    display: inline;
+    float: left;
+    width: 30%;
+    padding-top: 4% ;
+    padding-bottom: 4%;
 }
 
-#pageText h1 {
-    padding: 0px;
-    margin: 0px;
-    margin-bottom: 40px;
-    text-align: center;
-    font-size: 30px;
-    font-weight: 400;
-}
-
-#pageText p {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+#sidebar p {
     font-size: 18px;
-    font-weight: 300;
-    text-align: center;
-}
-
-#links {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    margin-left: 12.5%;
-    margin-right: 12.5%;
-    /*position: absolute;*/
-    width: 75%;
-}
-
-.linkCard {
-    display: inline-block;
-    width: 45.7%;
-    margin: 2%;
-    text-align: center;
-    padding: 0px;
-    border: 0px;
-    background-color: white;
-}
-
-.linkCard img {
-    height: 100%;
-    width: 100%;
-}
-
-.linkCard h2 {
-    font-size: 20px;
     font-weight: 400;
+    padding-left: 30%;
 }
 
-.linkCard p {
-    font-size: 16px;
-    font-weight: 300;
-}
-
-.linkCard a {
-    font-size: 16px;
-    font-weight: 300;
+#sidebar a {
     text-decoration: none;
-    color: #1F4850;
+    color: gray;
+}
+
+#sidebar b {
+    padding-left: 30%;
+    font-size: 18px;
+    font-weight: 800;
+}
+
+#instrumentContent {
+    padding-top: 2%;
+    display: inline;
+    float: right;
+    width: 70%;
+}
+
+#instrumentContent p {
+    font-size: 16px;
+    padding-right: 15%;
+    padding-left: 4%;
+    font-weight: 300;
+    line-height: 200%;
+}
+
+#instrumentContent h4 {
+    font-size: 18px;
+    padding-right: 15%;
+    padding-left: 4%;
+    font-size: 18px;
+    line-height: 200%;
+    font-weight: 300;
+}
+
+#instrumentContent h2 {
+    padding-right: 15%;
+    padding-left: 4%;
+    font-weight: 800;
+    font-size: 30px;
+}
+
+#instrumentContent img {
+    width: 80%;
+    margin-top: 4%;
+    margin-left: 4%;
+    margin-right: 15%;
+    margin-bottom: 5%;
 }
 
 /*-----------------------FOOTER---------------*/
 #footer {
+    clear: both;
     position: static;
     width: 100%;
 }
@@ -164,7 +165,7 @@ body {
 }
 
 #footer2 {
-    martin: 0;
+    margin: 0;
     height: 210px;
     background-color: #1F1F1F;
     font-size: 15px;
