--- a/css/style.css
+++ b/css/style.css
@@ -10,35 +10,12 @@ body {
 }
 
 /*---------------HEADER------------------------*/
-/* https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_carousel&stacked=h */
-
-#frontImage {
-    /*position: absolute;*/
-    width: 100%;
-    height: 393px; /* remember to change at #page top*/
-    /* The image used */
-    background-image: url("../images/frontImage.jpg");
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#frontText {
-    text-align: center;
-    font-size: 90px;
-    font-weight: 700;
-    padding-top: 13%;
-    color: white;
-}
 
 #navbar {
     position: fixed;
     background-color: #1F4850;
     width: 100%;
     height: 80px; /*remember to change at #page padding*/
-    z-index: 100;
     opacity: 0.8;
 }
 
@@ -54,12 +31,14 @@ body {
 
 #navbarMenu ul {
     float: right;
-    padding-top: 10px;
+    padding-top: 10px;  
 }
 
 #navbarMenu li {
-    display: inline;
     padding-right: 30px;
+    padding-left: 10px;
+    padding-bottom: 50px;
+    display: inline-block;
 }
 
 #navbarMenu li a {
@@ -67,92 +46,45 @@ body {
     text-decoration: none;
     font-weight: 800;
     font-size: 14px;
-    color: white;
+    color: white;    
 }
 
-/*-----------------------Page----------*/
+#navbarMenu ul ul
+{
+    display: none;
+    padding: 0;
+    margin-left: -30px;
+	position:absolute;
+	top: 100%;
+    background: white;
+    opacity: 0.8;
+}
 
-/* To Implement:
-    use window.pageYOffset to detect when window has been scrolled
-    and change the background of navbar to white.
-*/
+#navbarMenu ul ul li
+{
+    padding: inherit;
+    display: block;
+}
 
-#page {
-    /*position: absolute;*/
-    width: 100%;
-    /*top: 553px; /* 473 (frontImage) + 80 (navbar)*/
+#navbarMenu ul ul a
+{
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: block;
+    text-align: left;
     color: black;
-    margin: 0px;
-    padding: 0px;
 }
 
-#pageText {
-    width: 70%;
-    margin: auto;
-    margin-top: 90px;
+#navbarMenu li:hover > ul {
+    display: block;
 }
 
-#pageText h1 {
-    padding: 0px;
-    margin: 0px;
-    margin-bottom: 40px;
-    text-align: center;
-    font-size: 30px;
-    font-weight: 400;
-}
-
-#pageText p {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 18px;
-    font-weight: 300;
-    text-align: center;
-}
-
-#links {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    margin-left: 12.5%;
-    margin-right: 12.5%;
-    /*position: absolute;*/
-    width: 75%;
-}
-
-.linkCard {
-    display: inline-block;
-    width: 45.7%;
-    margin: 2%;
-    text-align: center;
-    padding: 0px;
-    border: 0px;
-    background-color: white;
-}
-
-.linkCard img {
-    height: 100%;
-    width: 100%;
-}
-
-.linkCard h2 {
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.linkCard p {
-    font-size: 16px;
-    font-weight: 300;
-}
-
-.linkCard a {
-    font-size: 16px;
-    font-weight: 300;
-    text-decoration: none;
-    color: #1F4850;
-}
 
 /*-----------------------FOOTER---------------*/
 #footer {
+    clear: both;
     position: static;
     width: 100%;
 }
@@ -165,8 +97,8 @@ body {
 }
 
 #footer2 {
-    martin: 0;
-    height: 210px;
+    margin: 0;
+    height: 160px;
     background-color: #1F1F1F;
     font-size: 15px;
     font-weight: 400;
@@ -175,7 +107,7 @@ body {
 }
 
 #footer2 ul {
-    padding-top: 110px;  
+    padding-top: 80px;  
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
