--- a/css/stylePeople.css
+++ b/css/stylePeople.css
@@ -1,14 +1,3 @@
-body {
-    margin: 0px;
-    font-family: 'Open Sans', sans-serif;
-    height: 100%;
-}
-
-#wrapper {
-    position: static;
-    min-height: 100%;
-}
-
 /*---------------HEADER------------------------*/
 /* https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_carousel&stacked=h */
 
@@ -33,55 +22,12 @@ body {
     color: white;
 }
 
-#navbar {
-    position: fixed;
-    background-color: #1F4850;
-    width: 100%;
-    height: 80px; /*remember to change at #page padding*/
-    z-index: 100;
-}
-
-#navbarLogo {
-    position: absolute;
-    height: 100%;
-}
-
-#navbarLogo img {
-    height: 80%;
-    padding-top: 5%;
-}
-
-#navbarMenu ul {
-    float: right;
-    padding-top: 10px;
-}
-
-#navbarMenu li {
-    display: inline;
-    padding-right: 30px;
-}
-
-#navbarMenu li a {
-    text-align: center;
-    text-decoration: none;
-    font-weight: 800;
-    font-size: 14px;
-    color: white;
-}
-
 /*-----------------------Page----------*/
 
-/* To Implement:
-    use window.pageYOffset to detect when window has been scrolled
-    and change the background of navbar to white.
-*/
-
 #page {
-    /*position: relative;*/
     width: 100%;
-    /*top: 553px; /* 473 (frontImage) + 80 (navbar)*/
-    color: black;
-    margin: 0px;
+    padding-right: 5%;
+    padding-left: 5%;
 	margin-bottom: 100px;
 	clear:both;
     padding: 0px;
@@ -111,7 +57,45 @@ body {
     text-align: center;
 }
 
-#links {
+#links1 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    width: 75%
+}
+
+#linkCard1 {
+    display: inline-block;
+    width: 70%;
+    margin: 2%;
+    padding-left: 20px;
+    border: 0px;
+	text-align: left;
+	vertical-align:center;
+    transform: translate(0, -25%);
+}
+
+#linkCard1 h2 {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+#linkCard1 p {
+    font-size: 16px;
+    font-weight: 300;
+}
+
+#linkCard1 a {
+    font-size: 10px;
+    font-weight: 300;
+    text-decoration: none;
+    color: #1F4850;
+	padding: 0px;
+    border: 0px;
+}
+
+#links2 {
     margin-top: 40px;
     margin-bottom: 40px;
     margin-left: 12.5%;
@@ -120,13 +104,12 @@ body {
     width: 75%;
 }
 
-.linkCard {
+#linkCard2 {
     display: inline-block;
     width: 70%;
     margin: 2%;
     padding-right: 20px;
     border: 0px;
-    background-color: white;
 	text-align: right;
 	vertical-align:center;
 }
@@ -141,57 +124,21 @@ body {
 	border-radius: 50%;
 }
 
-.linkCard h2 {
+#linkCard2 h2 {
     font-size: 20px;
     font-weight: 400;
 }
 
-.linkCard p {
+#linkCard2 p {
     font-size: 16px;
     font-weight: 300;
 }
 
-.linkCard a {
+#linkCard2 a {
     font-size: 10px;
     font-weight: 300;
     text-decoration: none;
     color: #1F4850;
 	padding: 0px;
     border: 0px;
-}
-
-/*-----------------------FOOTER---------------*/
-#footer {
-    position: static;
-    width: 100%;
-}
-
-#footer1 {
-    background-color: #333333;
-    height: 110px;
-    margin: 0;
-    text-align: center;
-}
-
-#footer2 {
-    martin: 0;
-    height: 210px;
-    background-color: #1F1F1F;
-    font-size: 15px;
-    font-weight: 400;
-    color: white;
-    text-align: center;
-}
-
-#footer2 ul {
-    padding-top: 110px;  
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-}
-
-#footer2 li {
-    display: inline-block;
-    padding-left: 30px;
-    padding-right: 30px;
 }
