almost ready for launch

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
 }
 
 #footer1 {
-    background-color: #333333;
+    background-color: #36393A;
     height: 110px;
     margin: 0;
     text-align: center;
@@ -99,7 +99,7 @@ body {
 #footer2 {
     margin: 0;
     height: 160px;
-    background-color: #1F1F1F;
+    background-color: #151D1E;
     font-size: 15px;
     font-weight: 400;
     color: white;
