--- a/css/stylePastEvents.css
+++ b/css/stylePastEvents.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 393px; /* remember to change at #page top*/
     /* The image used */
-    background-image: url("../images/turntable_makerFaire.png");
+    background-image: url("../images/ASOWorkshop.jpg");
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -28,22 +28,23 @@
     padding: 0px;
 }
 
-#pageText {
+#page {
     width: 70%;
+    display: block;
     margin: auto;
     margin-top: 90px;
 }
 
-#pageText h1 {
+#page h1 {
     padding: 0px;
     margin: 0px;
-    margin-bottom: 40px;
-    text-align: center;
+    margin-top: 40px;
+    text-align: left;
     font-size: 30px;
     font-weight: 400;
 }
 
-#pageText p {
+#page p {
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -53,7 +54,14 @@
     text-align: justify;
 }
 
-#pageText iframe {
+#page img {
+    width: 80%;
     display: block;
+    margin: 0 auto;
+}
+
+#page iframe {
+    display: block;
+    width: 80%;
     margin: 0 auto;
 }
