--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 393px; /* remember to change at #page top*/
     /* The image used */
-    background-image: url("../images/frontImage.jpg");
+    background-image: url("../images/group.jpg");
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
