--- a/css/stylePeople.css
+++ b/css/stylePeople.css
@@ -62,7 +62,7 @@
     margin-bottom: 40px;
     margin-left: 12.5%;
     margin-right: 12.5%;
-    width: 75%
+    width: 75%;
 }
 
 #linkCard1 {
@@ -73,6 +73,7 @@
     border: 0px;
 	text-align: left;
     transform: translate(0, -25%);
+	vertical-align:center;
 }
 
 #linkCard1 h2 {
