--- a/css/styleInstruments.css
+++ b/css/styleInstruments.css
@@ -82,6 +82,7 @@
 }
 
 #instrumentContent h2 {
+    padding-top: 4%;
     padding-right: 15%;
     padding-left: 4%;
     font-weight: 800;
@@ -89,6 +90,7 @@
 }
 
 #instrumentContent h1 {
+    padding-top: 2%;
     padding-right: 15%;
     padding-left: 2%;
     font-weight: 800;
@@ -97,10 +99,9 @@
 
 #instrumentContent img {
     width: 80%;
-    margin-top: 4%;
+    margin-top: 1%;
     margin-left: 4%;
     margin-right: 15%;
-    margin-bottom: 5%;
 }
 
 #instrumentContent iframe {
