--- a/css/stylePastEvents.css
+++ b/css/stylePastEvents.css
@@ -54,6 +54,16 @@
     text-align: justify;
 }
 
+#page i {
+	width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 14px;
+	font-style: italic;
+    font-weight: 300;
+    text-align: justify;
+}
+
 #page img {
     width: 80%;
     display: block;
